Added Optional Google Font (Open Sans)
Optional usage of Open Sans via Google Fonts. Follow instructions on
line 14 of index.html to get started.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+		<!-- optional: (see vars.scss ~line 21) <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,300,700"> -->
 		<link rel="stylesheet" href="css/style.css">
 		<script src="js/vendor/modernizr-2.6.1.min.js"></script>
 	</head>
