--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]> <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
@@ -11,17 +11,17 @@
 
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-		<!-- optional: (see vars.scss ~line 21) <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,300,700"> -->
-		<link rel="stylesheet" href="css/style.css">
-		<script src="js/vendor/modernizr-2.6.1.min.js"></script>
+		<!-- optional: (see vars.scss ~line 21) <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700"> -->
+		<link rel="stylesheet" href="style.css">
+		<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 	</head>
 	<body>
 
 		<!-- Add your site or application content here -->
 		<p>Hello world! This is HTML5 Boilerplate.</p>
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
 		<!-- All js files concatenate to this file with CodeKit -->
 		<script src="js/main.min.js"></script>
 
