--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
 
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+
 		<!-- optional: (see vars.scss ~line 21) <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700"> -->
 		<link rel="stylesheet" href="style.css">
-		<script src="js/vendor/modernizr-2.6.2.min.js"></script>
+		
+		<!--[if lt IE 9]><script src="js/vendor/html5.js" type="text/javascript"></script><![endif]-->
+		<!-- optional: Only add if you want to use it. Otherwise just use html5shiv above <script src="js/vendor/modernizr-2.6.2.min.js"></script> -->
 	</head>
 	<body>
 
 		<!-- Add your site or application content here -->
 		<p>Hello world! This is HTML5 Boilerplate.</p>
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
 		<!-- All js files concatenate to this file with CodeKit -->
 		<script src="js/main.min.js"></script>
 
