--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 
-		<!-- optional: (see vars.scss ~line 21) <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700"> -->
+		<!-- optional: (see _my-vars.scss ~line 38) <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700"> -->
 		<link rel="stylesheet" href="style.css">
 		
 		<!--[if lt IE 9]><script src="js/vendor/html5.js" type="text/javascript"></script><![endif]-->
